补全0910以及之前几天的

--- a/CppLearn20250910.md
+++ b/CppLearn20250910.md
@@ -1,5 +1,9 @@
 # 2025年9月10日
 
+由于前几天没有想写日志，所以全都放在9月10日这一天的文档内
+
+
+
 ## 数组的使用与理解
 
 1. 基本声明与初始化：能够正确声明并初始化一维和多维数组。
@@ -512,9 +516,449 @@ int main(int argc, char* argv[]) {
 
 ## 函数指针 指针函数
 
+函数指针
+
+1.基本概念理解：理解函数指针是存储函数地址的变量，能够通过该指针调用对应的函数。
+
+2.声明与使用：掌握如何正确声明函数指针变量，包括其指向的函数类型（返回类型、参数列表）。
+
+```C++
+函数返回值类型 (*funcptr)(函数的参数列表);
+```
 
 
 
+3.赋值与调用：掌握如何给函数指针赋值（即赋予函数地址），以及如何通过函数指针调用函数。
+
+```C++
+int add(int a,int b){
+  return a+b;
+}
+int* (*padd)(int,int)=add;
+//后续可以通过padd调用add
+int num=padd(1,2);
+```
 
 
 
+指针函数
+
+1. 基本概念理解：理解指针函数是返回指针的函数，而非函数指针。
+
+2. 声明与使用：掌握如何正确声明指针函数，包括其返回类型（指针类型）和参数列表。
+
+```C++
+int* func(参数列表){
+  int* p=nullptr;
+  return p;
+}
+```
+
+
+
+3. 返回值：理解指针函数返回的是指针类型的数据，并能正确使用这些返回值。
+
+1. 理解函数指针的使用场景。
+
+   1）回调函数，上层传入一个上层的函数给底层，然后把函数的执行交给底层来调用，回调函数故名思义就是回头调用的函数，常用来实现事件处理、异步操作等。
+
+   2）策略模式（可插拔算法），根据需求不同替换执行的函数，比如各种排序算法，根据函数指针决定调用什么排序算法。
+
+   3）函数表（跳转表 / 虚拟函数替代）
+
+   ```C++
+   #include <iostream>
+   using namespace std;
+   
+   void add() { cout << "Add\n"; }
+   void sub() { cout << "Sub\n"; }
+   void mul() { cout << "Mul\n"; }
+   
+   int main() {
+       void (*ops[3])() = {add, sub, mul}; // 函数指针数组
+       int choice;
+       cin >> choice;
+       if (choice >= 0 && choice < 3)
+           ops[choice]();  // 动态调用对应函数
+   }
+   ```
+
+   4）面向对象编程之前的多态实现。
+
+   总之，函数指针的目的就是 **让函数调用从“编译时确定”变成“运行时决定”**。
+
+2. 理解模板方法设计模式，尝试将函数指针运用在模板方法设计模式中。
+
+   ```C++
+   //参考gpt给出的代码
+   #include <iostream>
+   #include <vector>
+   using namespace std;
+   
+   // 模板方法类
+   class DataProcessor {
+   public:
+       using ProcessFunc = void(*)(vector<int>&); // 定义函数指针类型
+   
+       DataProcessor(ProcessFunc func) : processFunc(func) {}
+   
+       // 模板方法（固定算法骨架）
+       void run() {
+           readData();
+           processFunc(data); // 可变步骤，用函数指针替代
+           outputData();
+       }
+   
+   private:
+       vector<int> data;
+   
+       void readData() {
+           data = {5, 2, 9, 1, 7};
+           cout << "读取数据完成\n";
+       }
+   
+       void outputData() {
+           cout << "结果: ";
+           for (int x : data) cout << x << " ";
+           cout << endl;
+       }
+   
+       ProcessFunc processFunc; // 保存“可变步骤”的函数指针
+   };
+   
+   // 具体实现1：排序
+   void sortData(vector<int>& data) {
+       sort(data.begin(), data.end());
+       cout << "已排序\n";
+   }
+   
+   // 具体实现2：翻倍
+   void doubleData(vector<int>& data) {
+       for (auto& x : data) x *= 2;
+       cout << "已翻倍\n";
+   }
+   
+   int main() {
+       DataProcessor p1(sortData);   // 算法骨架 + 排序实现
+       DataProcessor p2(doubleData); // 算法骨架 + 翻倍实现
+   
+       p1.run();
+       p2.run();
+   }
+   
+   ```
+
+   ## 回调函数的理解
+
+   1.基本概念理解：
+
+   1.1理解回调函数是一种通过函数指针调用的函数，它作为参数传递给另一个函数。
+
+   1.2理解回调函数允许上层代码将一段代码传递给底层模块，由底层模块在适当的时候调用。
+
+   1.3了解回调函数通常用于事件处理、异步编程等场景。
+
+   2.函数指针的使用：
+
+   2.1掌握如何声明函数指针变量。
+
+   2.2掌握如何将函数地址赋给函数指针变量。
+
+   2.3理解如何通过函数指针调用函数。
+
+   3.回调函数的实现：
+
+   3.1能够设计包含回调函数作为参数的函数接口。
+
+   3.2能够编写调用包含回调函数参数的函数，并传递合适的回调函数。
+
+   ```C++
+   #include <iostream>
+   
+   typedef void (*fun_ptr)(int [], int);
+   
+   void Func(int nums[], int size, fun_ptr callback) {
+     //在这个内部可以进行一些别的操作之后，自行决定什么时候调用外部传进来的函数
+     callback(nums, size);
+   }
+   
+   void DoubleNums(int nums[], int size) {
+       for (int i = 0; i < size; ++i) {
+           nums[i] = nums[i] * 2;
+       }
+   }
+   
+   
+   int main() {
+       int nums[] = {1, 2, 3, 4, 5};
+       Func(nums, 5, DoubleNums);//把回调函数作为参数传入进去
+       for (int i = 0; i < 5; ++i) {
+           std::cout << nums[i] << " ";
+       }
+       return 0;
+   }
+   ```
+
+   
+
+   4.回调函数的调用时机：
+
+   4.1理解回调函数何时被调用，通常由被调用函数（即包含回调函数作为参数的函数）决定。
+
+   1.理解模板方法设计模式，尝试将回调函数运用在模板方法设计模式中。
+
+   2.使用typedef重命名回调函数的声明，使其可读性更高。
+
+## inline的作用
+
+1.基本概念理解：
+
+1.1理解inline是C++中的一个请求（而非命令），用于向编译器建议将函数体在每个调用点内联展开，以减少函数调用的开销。
+
+1.2理解inline函数通常用于小函数，特别是那些执行速度快且调用频繁的函数。
+
+1.3了解inline函数的定义通常放在头文件中，以避免链接时重复定义的问题。
+
+2.使用场景与限制：
+
+2.1理解inline函数不能包含复杂的控制结构（如循环和递归）。
+
+2.2了解编译器可能忽略inline请求，特别是当函数体较大或包含复杂逻辑时。
+
+理解概念、作用和使用即可。
+
+## enum class的作用
+
+基本概念理解：
+
+1.理解enum class是C++11中引入的一种枚举类型，它提供了类型安全和作用域隔离。
+
+<a id="2"></a>
+
+2.理解enum class与普通枚举的主要区别（如作用域、类型安全、隐式转换的限制等）。
+
+```C++
+enum class Color{
+  kRed=0,
+  kGreen,
+  kBlue
+}
+enum Color1{
+  kred=0,
+  kgreen,
+  kblue
+}
+//作用域
+//enum class 在访问时必须加上空间，而enum则是全局范围，比如，Color::xxx,才能使用，而enum则可以直接使用比如kred。
+//类型安全、隐式转换
+//就比如，Color1 red=kred；int x=0；if（red==x）此时就会有类型安全问题，发生隐式转换，red会被转换成int类型，而enum class就没有这种问题
+```
+
+
+
+作用域与类型安全：
+
+1.理解enum class的枚举成员默认具有强作用域，需要通过枚举类型名来访问。
+
+2.理解enum class的类型安全性，即不能直接进行不同类型枚举之间的隐式转换。
+
+枚举值的定义与访问：
+
+1.掌握如何在enum class中定义枚举值。
+
+2.掌握如何通过枚举类型名加枚举值名的方式来访问枚举值。
+
+枚举值的类型转换：
+
+1.理解从enum class枚举值到基础数据类型（如int）的显式转换方法。
+
+```C++
+//使用类型转换可以做到
+int rgb_r=std::static_cast<int>(kRed);
+```
+
+
+
+2.理解为什么需要显式转换，以及这种设计如何增强类型安全。
+
+
+
+1.如何将int值转成enum class类型？
+
+同强类型枚举类转换成int一样，使用static_cast显式转换
+
+2.enum和enum class的区别是什么？
+
+参考：[理解enum class与普通枚举的主要区别](#2)
+
+## const的理解
+
+基本概念理解：
+
+1.理解const用于声明常量，即其值在初始化后不能被修改。
+
+2.理解const可以修饰变量、指针、函数的参数、返回值以及成员函数。
+
+const变量的使用：
+
+1.掌握如何声明const变量并理解其不可变性。
+
+2.理解const变量的作用域和生命周期。
+
+const指针的使用：
+
+1.区分const指针（指向常量的指针）和指针常量（常量指针）。
+
+```C++
+int const*p;//这两种写法是一样的，真正的区别点在于是const修饰*还是*修饰const
+const int* p;//指向int常量的指针,防止通过这个指针修改对象，但是指针可以指向其他对象
+int* const p;//指向int的常量指针，指向int非const的值，但是指针不能修改指向的地址
+
+```
+
+
+
+2.理解const指针如何防止指针指向的内容被修改。
+
+3.掌握const指针的声明和初始化。
+
+const修饰函数参数和返回值：
+
+1.理解const修饰函数参数的作用（保证参数在函数内不被修改）。
+
+2.理解const修饰函数返回值的作用（防止返回值的误修改，特别是返回指针或引用时）。
+
+const成员函数：
+
+1.理解const成员函数保证在调用过程中不会修改对象的任何成员变量（除了mutable修饰的变量）。
+
+2.掌握如何在类成员函数中声明和使用const限定符。
+
+1. 在const成员函数中，能否加锁和解锁，为什么？
+
+   可以的，但是也要加上mutable修饰，否则就不行。
+
+2. const和define的区别？
+
+   define是宏定义，全局有效，在编译期之前（预处理阶段，直接替换文本），没有类型检查
+
+   const有作用域范围，在编译期处理，有类型检查
+
+3. char*、const char*、char* const、const char* const 有什么区别？
+
+   char定义一个字符变量，const char定义一个不可修改的字符变量，char* cosnt定义一个不可修改指向的字符指针，const char* const定义一个不可修改指向的，指向一个字符常量。
+
+4. volatile关键字的作用是什么？
+
+   `volatile` 是 C/C++ 中的一个关键字，用来告诉编译器：**这个变量的值可能随时被外部环境改变，所以不要对它进行优化**。
+
+   换句话说，`volatile` **防止编译器对变量进行“假设不变”的优化**。
+
+   当一个变量被 `volatile` 修饰时：
+
+   1. **每次访问都必须从内存中读取**，不能使用寄存器缓存的值。
+   2. **不能对访问顺序进行优化**，保证读写操作的时序严格按照代码顺序。
+
+## constexpr的理解
+
+和const大差不差
+
+基本概念理解：
+
+1.理解constexpr用于声明编译时常量，即其值在编译时就能确定。
+
+2.理解constexpr可以修饰变量、函数。
+
+constexpr变量的使用：
+
+1.掌握如何声明constexpr变量并初始化。
+
+2.理解constexpr变量的作用域和生命周期。
+
+3.了解constexpr变量可以用于数组大小、模板参数等需要编译时常量的场景。
+
+constexpr函数的使用：
+
+1.掌握如何编写constexpr函数，确保函数体内的操作都是编译时可知的。
+
+2.理解constexpr函数可以在需要编译时常量的地方被调用，如模板参数、数组大小等。
+
+3.了解constexpr函数在运行时也可以被调用，此时它们表现得和普通函数一样。
+
+## 引用的理解
+
+基本概念理解：
+
+1. 理解引用是变量的别名，不是变量本身，也不是变量的拷贝。
+
+2. 理解引用在定义时必须被初始化，且一旦被绑定到一个变量上，就不能再被绑定到另一个变量上。
+
+引用的使用：
+
+1. 掌握如何通过引用来访问和修改它所引用的变量的值。
+
+2. 理解引用在函数参数传递中的作用，特别是与指针相比的优势（如语法简洁性和类型安全性）。
+
+   1）避免拷贝；2）可以直接修改参数的数据。
+
+   优势：语法简洁，使用起来就像直接操作对象一样，指针就必须要使用解引用`*`符号访问数据。
+
+   类型安全，首先是引用必须初始化，不会有指针为空的特殊情况，不需要判断指针是否为`NULL`and `nullptr`的情况，
+
+   不可重复绑定，引用一旦初始化绑定一个对象后，就不能再修改了，可以避免指针出现“野指针”或是“悬垂指针”的问题（虽然可能会出现悬垂引用的情况，但因为引用不可重新赋值，所以来源可控清晰）
+
+1. 函数参数中是否可以使用const 引用形式，有什么优点吗？
+
+   可以，1）避免不必要的拷贝，提高性能；2）保证函数不修改原始对象；3）const修饰后支持右值传入。
+
+2. 函数参数中使用non-const 引用形式的目的是什么？
+
+   在函数参数中使用 `non-const` 引用形式（即 `T&`）有明确且特定的目的，但它是一把"双刃剑"，需要谨慎使用。
+
+   **核心目的：允许函数修改调用者的对象**
+
+   **`non-const` 引用的最主要目的就是让函数能够直接修改传递给它的实际参数（实参）**。函数内部对引用参数的任何修改都会直接反映到调用处的原始变量上。
+
+## 引用 vs 指针
+
+指针与引用的区别
+
+1.存储方式：
+
+1.1指针：是变量，存储的是内存地址。
+
+1.2引用：是变量的别名，不存储地址，通过别名直接访问原始变量。
+
+2.初始化：
+
+2.1指针：可以不初始化（但应避免，以免成为野指针），初始化时需要显式地给出地址。
+
+2.2引用：必须在定义时初始化，且一旦初始化后不可再改变为引用另一个变量。
+
+3.空值：
+
+3.1指针：可以指向空（nullptr或NULL），表示不指向任何对象。
+
+3.2引用：必须总是指向某个对象，不存在空引用的概念。
+
+4.多级引用/指针：
+
+4.1指针：可以有多级指针（如int**），指向另一个指针。
+
+4.2引用：不支持多级引用，即不能定义引用的引用。
+
+5.函数参数与返回值：
+
+5.1指针：作为参数传递时，可以修改原始数据（如果指向了非const对象）。作为返回值时，需要注意生命周期问题。
+
+5.2引用：作为参数传递时，同样可以修改原始数据（如果非const）。作为返回值时，更安全，因为不需要担心指针的生命周期问题。
+
+使用场景
+
+1.当需要指向空值或重新指向另一个对象时，使用指针。
+
+2.当需要在函数间安全地传递大型对象或需要修改函数参数时，优先考虑引用（除非有指向空或重新指向的需求）。
+
+3.在需要动态内存分配或管理内存时，使用指针。
+
+4.在需要避免拷贝大型对象以提高效率时，使用引用（特别是作为函数参数或返回值）。
