左右值、auto/decltype、std::move(添加两个问题)

--- a/CppLearn20250912.md
+++ b/CppLearn20250912.md
@@ -146,3 +146,10 @@ std::move的使用场景
 
   `std::move`只是将一个左值转换成右值，没有别的什么操作，具体要看移动构造函数和移动赋值函数的实现
 
+1. 理解如何通过move触发移动语义
+
+   将左值转换成右值，然后调用移动相关操作。
+
+2. 理解move的作用，以及实现原理
+
+   将左值转换成右值，实现原理就是不管参数是左值还是右值都通过static_cast转换，返回右值。
