string的使用与理解、map/ unordered_map

--- a/CppLearn20250917.md
+++ b/CppLearn20250917.md
@@ -56,22 +56,22 @@
 
 ### 基本概念理解
 
-   a. 理解map是基于红黑树实现的关联容器，支持唯一键的映射，并按键排序。
-   b. 理解unordered_map是基于哈希表实现的关联容器，支持唯一键的映射，但不保证顺序。
-   c. 了解map和unordered_map提供的接口，如insert(), erase(), find(), count(), size(), empty(), operator[]等。
+1. 理解map是基于红黑树实现的关联容器，支持唯一键的映射，并按键排序。
+2. 理解unordered_map是基于哈希表实现的关联容器，支持唯一键的映射，但不保证顺序。
+3. 了解map和unordered_map提供的接口，如insert(), erase(), find(), count(), size(), empty(), operator[]等。
 
 ### 插入与删除操作
 
-a. 掌握如何使用insert()方法向map或unordered_map中插入键值对。
-b. 掌握如何使用erase()方法从map或unordered_map中删除元素。
-c. 了解operator[]在map和unordered_map中的用法，以及它们在处理不存在的键时的表示。
+1. 掌握如何使用insert()方法向map或unordered_map中插入键值对。
+2. 掌握如何使用erase()方法从map或unordered_map中删除元素。
+3. 了解operator[]在map和unordered_map中的用法，以及它们在处理不存在的键时的表示。
 
 
 ### 查找与访问
-a. 理解如何使用find()方法查找map或unordered_map中的元素。
-b. 掌握如何使用at()方法通过键访问元素（注意at()在键不存在时会抛出异常）。
-c. 了解如何直接使用operator[]访问元素，但注意其潜在的插入行为。
+1. 理解如何使用find()方法查找map或unordered_map中的元素。
+2. 掌握如何使用at()方法通过键访问元素（注意at()在键不存在时会抛出异常）。
+3. 了解如何直接使用operator[]访问元素，但注意其潜在的插入行为。
 
 ### 遍历
-a. 掌握如何使用迭代器遍历map或b. unordered_map中的所有元素。
-c. 了解如何使用范围for循环（C++11及以后）遍历map或unordered_map。
+1. 掌握如何使用迭代器遍历map或b. unordered_map中的所有元素。
+2. 了解如何使用范围for循环（C++11及以后）遍历map或unordered_map。
