完善图片显示

--- a/Cpplearn20250918.md
+++ b/Cpplearn20250918.md
@@ -175,7 +175,7 @@
 
 一图流：
 
-<img src="/Users/joeegin/Desktop/下载/deepseek_mermaid_20250918_6bb6a3.png" alt="deepseek_mermaid_20250918_6bb6a3" style="zoom:25%;" />
+<img src="CppLearn20250918_1.png" style="zoom:25%;" />
 
 ## unordered_set、set的使用与理解
 
